Add methods to HtmlPane & HtmlWithTocPane to set colors   * Also changed how HtmlPane is initialized so that, if a     URL is passed to a constructor, that URL will be used     in a JEditorPane constructor.